<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/location_permission_required_dialog"
        android:fontFamily="@font/font_medium"/>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/colorTextOpacity"
        android:id="@+id/tvSteps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_location_services"
        android:lineSpacingExtra="6dp"
        android:fontFamily="@font/font_regular"/>
    <TextView
        android:textSize="15sp"
        android:textColor="@color/colorTextOpacity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enable_location_services_content"
        android:lineSpacingExtra="6dp"
        android:fontFamily="@font/font_regular"/>
    <Button
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:id="@+id/btnOpenSettings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="@dimen/_8dp"
        android:text="@string/open_location_settings"
        android:textAllCaps="true"
        android:fontFamily="@font/font_regular"
        android:backgroundTint="@color/colorAccent"/>
</LinearLayout>
