<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardCornerRadius="30dp"
    app:strokeColor="@android:color/transparent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/_10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieView"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginHorizontal="@dimen/_12dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/call_end_lottie"/>
        <com.google.android.material.textview.MaterialTextView
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:gravity="center"
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/quick_access_after_call"
            android:fontFamily="@font/font_medium"
            android:layout_marginHorizontal="@dimen/_12dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="14sp"
            android:textColor="@color/colorTextOpacity"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="15dp"
            android:text="@string/quick_capture_with_location_anytime_nanywhere"
            android:fontFamily="@font/font_medium"
            android:layout_marginHorizontal="@dimen/_12dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12dp">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_overlay_dialog"/>
            <com.google.android.material.textview.MaterialTextView
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/capture_location_proof_instantly"
                android:fontFamily="@font/font_medium"
                android:layout_marginHorizontal="@dimen/_12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="@dimen/_12dp">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_overlay_dialog"/>
            <com.google.android.material.textview.MaterialTextView
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_time_with_quick_access"
                android:fontFamily="@font/font_medium"
                android:layout_marginHorizontal="@dimen/_12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="@dimen/_12dp">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_check_overlay_dialog"/>
            <com.google.android.material.textview.MaterialTextView
                android:textSize="15sp"
                android:textColor="@color/colorText"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/works_right_after_every_call"
                android:fontFamily="@font/font_medium"
                android:layout_marginHorizontal="@dimen/_12dp"/>
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:id="@+id/btnGrantPermission"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:text="@string/allow_permission"
            android:fontFamily="@font/font_medium"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="10sp"
            android:textColor="@color/colorTextOpacity"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/you_can_turn_this_off_anytime_in_settings"
            android:fontFamily="@font/font_medium"
            android:layout_marginHorizontal="@dimen/_12dp"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
