<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_bg_rounded_sheet"
    android:paddingBottom="@dimen/_12sdp">

    <androidx.cardview.widget.CardView
        android:id="@+id/drag_handle"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="@dimen/_10sdp"
        app:cardBackgroundColor="@color/colorIconOpacity"
        app:cardElevation="@dimen/_0sdp"
        android:layout_marginStart="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:alpha="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="@dimen/_0sdp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_title"
        style="@style/TextBold"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:text="@string/sheet_title_delete_permanently"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drag_handle" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_description"
        style="@style/TextRegular"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:text="@string/sheet_body_delete_permanently"
        android:textColor="@color/colorTextOpacity"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_remove"
        style="@style/MaterialButtonTransparent"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/action_delete"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="@dimen/_8sdp"
        app:backgroundTint="@color/colorRed"
        app:fontFamily="@font/bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/MaterialButtonTransparent"
        android:layout_width="@dimen/_0sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        app:fontFamily="@font/bold"
        android:text="@string/action_cancel"
        app:cornerRadius="@dimen/_8sdp"
        android:textSize="@dimen/_12ssp"
        app:backgroundTint="@color/colorCardBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_remove" />


</androidx.constraintlayout.widget.ConstraintLayout>